# imogrify-cmake

./: .clang-format  .clang-tidy  .gitignore  ACKNOWLEDGEMENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  vcpkg.json
.github/workflows/: build_checks.yml  cmake-multi-platform.yml
benchmarks/: CMakeLists.txt
benchmarks/benchmark_utils/: CMakeLists.txt
benchmarks/benchmark_utils/include/imfy/bench/: raw_image_generator.hpp
benchmarks/dependency_benchmarks/: CMakeLists.txt  dependency_benchmark_png_encode.cpp  encode_libpng.cpp  encode_lodepng.cpp  encode_spng.cpp
benchmarks/dependency_benchmarks/include/imfy/bench/: encode_libpng.hpp  encode_lodepng.hpp  encode_spng.hpp
cmake/: clang_tidy.cmake  compiler_support.cmake  compiler_warnings.cmake  dependency_data.cmake  operative_system_support.cmake  options.cmake  platform.cmake
cmake/dependencies/: boost.cmake  catch2.cmake  fmt.cmake  libpng.cmake  magic_enum.cmake  vcpkg.cmake  wuffs.cmake
imogrify/: CMakeLists.txt
imogrify/app/: CMakeLists.txt  main.cpp
imogrify/arguments/: CMakeLists.txt  image_format.cpp
imogrify/arguments/include/imfy/: arguments.hpp  image_format.hpp
imogrify/core/: CMakeLists.txt  locale.cpp  path.cpp
imogrify/core/include/imfy/: allocator.hpp  build.hpp.in  container_concepts.hpp  dependencies.hpp.in  dependency.hpp  locale.hpp  path.hpp  string_view.hpp  vector.hpp  version.hpp
imogrify/core/locale/: CMakeLists.txt  locale.cpp
imogrify/core/string/: CMakeLists.txt
imogrify/core/string/include/imfy/: string_view.hpp
tests/: CMakeLists.txt  tests_main.cpp
tests/arguments/: arguments_test.cpp  image_format_test.cpp
tests/core/: build_test.cpp  dependencies_test.cpp  path_test.cpp
tests/core/string/: build_test.cpp  container_concepts_test.cpp  dependencies_test.cpp  string_view_test.cpp  tests_string_view.cpp
